[package]
name = "thrust"
version = "0.1.0"
description = "Thrift for Rust"
documentation = "https://thehydroimpulse.github.io/thrust/thrust/index.html"
homepage = "https://github.com/thehydroimpulse/thrust"
repository = "https://github.com/thehydroimpulse/thrust"
readme = "Readme.md"
keywords = ["thrift", "rpc", "async", "networking"]
license = "MIT"
authors = ["Daniel Fagnan <dnfagnan@gmail.com>"]

[dependencies]
byteorder = "0.4"
docopt = "0.6"
rustc-serialize = "0.3"
lazy_static = "0.1.*"
tangle = "0.4.0"
rand = "0.3"
slab = "0.1.3"
num_cpus = "0.2"
libc = "0.2"

[dependencies.mio]
git = "https://github.com/carllerche/mio"

[dependencies.bytes]
git = "https://github.com/carllerche/bytes"

[dependencies.thrust_codegen]
path = "thrust-codegen"

[dependencies.thrust_parser]
path = "thrust-parser"
